--- a/styles/table.css
+++ b/styles/table.css
@@ -2,7 +2,7 @@
     --black: #04214f;
     --grey: #6a748a;
     --blue1: #20497a;
-    --blue2: ##91bbeb;
+    --blue2: #91bbeb;
     --brown: #5e4d09;
 }
 
@@ -27,10 +27,10 @@ thead th:nth-child(2){
     width: 10%;
 }
 thead th:nth-child(3){
-    width: 20%:
+    width: 20%;
 }
 thead th:nth-child(4){
-    width: 50%:
+    width: 50%;
 }
 
 thead th{
