--- a/article-list.css
+++ b/article-list.css
@@ -18,6 +18,9 @@ main *{
     margin: 0.5em 0 0.5em 0;
     transition: opacity 0.2s ease-in-out, background-color 0.3s ease-in-out;
 }
+.article-prev:last-child {
+    margin: 0.5em 0 0 0;
+}
 
 .article-info h3{
     font-size: 1em;
