--- a/sidebar-article.css
+++ b/sidebar-article.css
@@ -10,9 +10,13 @@
     margin: 1em 0 0 0;
 }
 .sidebar li{
-    font-size: 1.2em;
     padding: 0.15em;
+    font-size: 0.8em;
 }
+.sidebar #overview-begin > li{
+    font-size: 1.2em;
+}
+
 .sidebar a {
     text-decoration: none;
 }
