--- a/styles/article-list.css
+++ b/styles/article-list.css
@@ -19,6 +19,10 @@ main *{
     transition: opacity 0.2s ease-in-out, background-color 0.3s ease-in-out;
 }
 
+.article-prev:last-child {
+    margin: 0.5em 0 0 0;
+}
+
 .article-info h3{
     font-size: 1em;
     font-weight: normal;
